force-app/main/default/objects/Job_Applications__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Name</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Job Applications (First Name)</relationshipLabel>
    <relationshipName>Job_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>