force-app/main/default/objects/Job_Applications__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Name</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Job Applications (Last Name)</relationshipLabel>
    <relationshipName>Job_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>