force-app/main/default/objects/Job_Applications__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>position</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Job Applications (position)</relationshipLabel>
    <relationshipName>Job_Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>