force-app/main/default/objects/Job_Applications__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position Title</label>
    <referenceTo>Job_Applications__c</referenceTo>
    <relationshipLabel>Job Applications (Position Title)</relationshipLabel>
    <relationshipName>Job_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>